--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
-    "jade": "~1.9.2",
+    "mongoose": "~4.0.5",
+    "hbs": "~3.1.0",
     "morgan": "~1.5.3",
     "serve-favicon": "~2.2.1"
   }
