--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "mongoose": "~4.0.5",
     "ejs": "~2.3.1",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1"
+    "serve-favicon": "~2.2.1",
+    "path": "~0.11.14 ",
+    "formidable": "~1.0.17",
+    "node-xlsx": "~0.5.1"
   }
 }
