--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formidable": "~1.0.17",
     "node-xlsx": "~0.5.1",
     "express-session":"*",
-    "express-partials":"*"
+    "express-partials":"*",
+    "crypto":"*"
   }
 }
